# lydtrykk

./: .gitignore  AGENTS.md  CLAUDE.md  COSINUS-OVERGANG.md  LICENSE  PLAN.md  README.md  app.wasm  build.sh  cabal.project  cabal.project.wasm  default.json  ghc_wasm_jsffi.js  gridWorker.js  lydnivakart.html
.github/workflows/: deploy.yml
.zed/: settings.json
frontend/: frontend.cabal
frontend/app/: Main.hs
frontend/static/: default.json  grid3d.js  gridGeo.js  gridWorker.js  husrekker.js  lydnivakart.html  lydnivakart3d.html  lydnivakart3d.js  migrering.js  style.css  wasmInit.js
frontend/test/: grid3d.test.mjs  gridGeo.test.mjs  husrekker.test.mjs  migrering.test.mjs
husrekker/polygoner/: a-rekka.json  b-rekka.json  c-rekka.json  d-rekka.json  g1-rekka.json  g3-rekka.json  h-rekka.json  index.json  k-rekka.json  l-rekka.json  o-rekka.json  p-rekka.json  q-rekka.json  r-rekka.json  s-rekka.json  t-rekka.json  w-rekka.json
lyd-core/: lyd-core.cabal
lyd-core/bench/: Bench.hs
lyd-core/src/Lyd/: Beregning.hs  Felt.hs
lyd-core/test/: Spec.hs
pr-preview/pr-10/: default.json  gridWorker.js  lydnivakart.html
pr-preview/pr-11/: index.js
pr-preview/pr-12/: app.wasm  wasmInit.js
pr-preview/pr-13/: lydnivakart.html  style.css
pr-preview/pr-14/: default.json  lydnivakart.html
pr-preview/pr-15/: app.wasm  ghc_wasm_jsffi.js
pr-preview/pr-17/: gridGeo.js  lydnivakart.html
pr-preview/pr-18/: app.wasm  lydnivakart.html
pr-preview/pr-21/: ghc_wasm_jsffi.js  gridWorker.js
pr-preview/pr-21/husrekker/polygoner/: index.json  k-rekka.json
pr-preview/pr-22/: app.wasm  lydnivakart.html
pr-preview/pr-23/: app.wasm  ghc_wasm_jsffi.js  lydnivakart.html
pr-preview/pr-24/: app.wasm  ghc_wasm_jsffi.js  gridGeo.js  lydnivakart.html
pr-preview/pr-24/husrekker/polygoner/: b-rekka.json  e-rekka.json  j-rekka.json  q-rekka.json  u-rekka.json  z-rekka.json
pr-preview/pr-25/: app.wasm  ghc_wasm_jsffi.js  index.js  lydnivakart.html  migrering.js
pr-preview/pr-25/husrekker/polygoner/: g-rekka.json  m-rekka.json
pr-preview/pr-26/: app.wasm  ghc_wasm_jsffi.js  gridWorker.js  husrekker.js  lydnivakart.html
pr-preview/pr-26/husrekker/polygoner/: f-rekka.json  i-rekka.json  n-rekka.json  o-rekka.json  r-rekka.json  x-rekka.json
pr-preview/pr-27/: app.wasm  gridGeo.js  lydnivakart3d.html  lydnivakart3d.js
pr-preview/pr-27/husrekker/polygoner/: b-rekka.json  c-rekka.json  g2-rekka.json  k-rekka.json  t-rekka.json  v-rekka.json  y-rekka.json
pr-preview/pr-6/: app.wasm  index.html  style.css
pr-preview/pr-8/: ghc_wasm_jsffi.js
