cabal-version:      3.0
name:               frontend
version:            0.1.0.0
synopsis:           Miso-frontend for lydnivå/avstand-kalkulator (bygges for wasm)
license:            MIT
author:             Torstein Nesby
maintainer:         ttnesby@gmail.com
build-type:         Simple

common options
  ghc-options:
    -Wall -O2 -funbox-strict-fields -fspecialise-aggressively

  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
      "-optl-Wl,--export=acoustics_dirGain"
      "-optl-Wl,--export=acoustics_reqDist"
      "-optl-Wl,--export=acoustics_levelAt"
      "-optl-Wl,--export=acoustics_dbSum"
      "-optl-Wl,--export=acoustics_grense"
      "-optl-Wl,--export=acoustics_gridStripe"
      "-optl-Wl,--export=acoustics_gridStripeSkjermet"
      "-optl-Wl,--export=acoustics_fasadeVerst"
    cpp-options:
      -DWASM
    build-depends:
      ghc-experimental

executable app
  import:           options
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base <5,
    miso >=1.9,
    lyd-core
  default-language: Haskell2010
