cabal-version:      3.0
name:               lyd-core
version:            0.1.0.0
synopsis:           Lydnivå/avstand-beregning for varmepumpe-utedel (NS 8175)
license:            MIT
author:             Torstein Nesby
maintainer:         ttnesby@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  Lyd.Beregning
    hs-source-dirs:   src
    build-depends:    base >=4.15 && <5
    default-language: Haskell2010

test-suite lyd-core-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:
        base,
        lyd-core,
        tasty >=1.4,
        tasty-hunit >=0.10,
        tasty-quickcheck >=0.10
    default-language: Haskell2010
